Document Distant Horizons server pre-generation